# embedded-mono-img

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: errors.rs  main.rs
